# Homework_webpython_05

./: README.md  app.py  const.py  main.py  pyproject.toml  requirements.txt
