[tool.poetry]
name = "homework-webpython-05"
version = "0.1.0"
description = ""
authors = ["Andrey Maibrodskiy <andrey.maybrodskyy@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_webpython_05"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.3"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
